# holey

./: .gitignore  .gitmodules  CONTRIBUTING.md  PROPERTY.md  README.md  diagram.md  diagram_staging_SMT.md  property_tester.py  puzzle_solver.py  pyproject.toml  regenerate_examples.py  regression.py  results_graph_claude_extrapolation.py  test_runner.py
analysis/: README.md  Study_5:0.smt  Study_5:0.txt  Study_5_0_small.smt  Study_8_0.smt  Study_8_0.txt  Study_8_0_small.smt
examples/: CertifiedGCD.py  CertifiedGCD.smt  CertifiedGCD.txt  ClockAngle.py  ClockAngle.smt  ClockAngle.txt  DeepParens.py  DeepParens.smt  DeepParens.txt  DeepParens_no_ite.smt  DeepParens_no_ite.txt  MaxInt.py  MaxInt.smt  MaxInt.txt  MonkeyAndCoconut.py  MonkeyAndCoconut.smt  MonkeyAndCoconut.txt  OddDegreePolynomialRoot.py  OddDegreePolynomialRoot.smt  OddDegreePolynomialRoot.txt  README.md  RollingMax.py  RollingMax.smt  RollingMax.txt  Study_1.py  Study_1.smt  Study_1.txt  Study_15.py  Study_15.smt  Study_15.txt  Study_15_no_bounded.smt  Study_15_no_bounded.txt  Study_1_llm.txt  Study_1_llm_gemma.txt  Study_1_llm_sonnet3.txt  Study_1_llm_sonnet35.txt  Sudoku.py  Sudoku.smt  Sudoku.txt  TriangleArea.py  (+28 more)
examples_property/: arithmetic.py
holey/: __init__.py  backend.py  backend_bounded.py  backend_lib.py  core.py  function.py  list_analysis.py  list_rewriter.py  llm.py  llm_solver.py  preprocessor.py  solver_stats.py  synthesis.py
log/: extrapolatable_claude_haiku.txt  extrapolatable_claude_sonnet.txt  extrapolate_claude_haiku.txt  extrapolate_claude_opus.txt  extrapolate_claude_sonnet.txt  (+19 more)
(+20 files in other folders)
